--- a/style.css
+++ b/style.css
@@ -129,6 +129,8 @@ a {
     font-weight: 100;
     color: #1F2937;
     margin: 0px;
+    flex-grow: 0;
+    width: 800px;
 }
 
 .three .author {
@@ -136,10 +138,14 @@ a {
     text-align: end;
     font-size: 24px;
     font-weight: bold;
+    flex-grow: 0;
+    width: 800px;
 }
 
 .four {
-    padding: 128px 15%;
+    padding: 128px ;
+    display: flex;
+    justify-content: center;
 }
 
 .modal {
@@ -150,6 +156,8 @@ a {
     padding: 48px;
     gap: 128px;
     border-radius: 8px;
+    flex-grow: 0;
+    width: 800px
 }
 
 .modal .left {
